tests/ui/macros/restricted-shadowing-legacy.stderr
error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-legacy.rs:101:13
   |
LL | /  macro_rules! include { () => {
LL | |      macro_rules! gen_outer { () => {
LL | |          macro_rules! m { () => { Wrong } }
LL | |      }}
...  |
LL | |/         macro_rules! gen_gen_inner_invoc { () => {
LL | ||             gen_inner!();
LL | ||             m!();
   | ||             ^ ambiguous name
LL | ||         }}
   | ||__________- in this expansion of `gen_gen_inner_invoc!` (#2)
LL | |          gen_gen_inner_invoc!();
   | |          ---------------------- in this macro invocation (#2)
...  |
LL | |      }
LL | |  }}
   | |___- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:88:9
   |
LL | /   macro_rules! include { () => {
LL | |       macro_rules! gen_outer { () => {
LL | |           macro_rules! m { () => { Wrong } }
LL | |       }}
LL | | /     macro_rules! gen_inner { () => {
LL | | |         macro_rules! m { () => { Right } }
   | | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | | |     }}
   | | |______- in this expansion of `gen_inner!` (#3)
...  |
LL | | /         macro_rules! gen_gen_inner_invoc { () => {
LL | | |             gen_inner!();
   | | |             ------------ in this macro invocation (#3)
LL | | |             m!();
LL | | |         }}
   | | |__________- in this expansion of `gen_gen_inner_invoc!` (#2)
LL | |           gen_gen_inner_invoc!();
   | |           ---------------------- in this macro invocation (#2)
...  |
LL | |       }
LL | |   }}
   | |____- in this expansion of `include!` (#1)
LL |
LL |     include!();
   |     ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:97:9
   |
LL | / macro_rules! include { () => {
LL | |     macro_rules! gen_outer { () => {
LL | |         macro_rules! m { () => { Wrong } }
LL | |     }}
...  |
LL | |         macro_rules! m { () => {} }
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...  |
LL | |     }
LL | | }}
   | |__- in this expansion of `include!`
LL |
LL |   include!();
   |   ---------- in this macro invocation

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-legacy.rs:139:42
   |
LL | / macro_rules! include { () => {
LL | |     macro_rules! gen_outer { () => {
LL | |         macro_rules! m { () => { Wrong } }
LL | |     }}
...  |
LL | |         macro_rules! gen_invoc { () => { m!() } }
   | |         ---------------------------------^-------
   | |         |                                |
   | |         |                                ambiguous name
   | |         in this expansion of `gen_invoc!` (#2)
LL | |         gen_invoc!();
   | |         ------------ in this macro invocation (#2)
...  |
LL | |     }
LL | | }}
   | |__- in this expansion of `include!` (#1)
LL |
LL |   include!();
   |   ---------- in this macro invocation (#1)
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:88:9
   |
LL | /  macro_rules! include { () => {
LL | |      macro_rules! gen_outer { () => {
LL | |          macro_rules! m { () => { Wrong } }
LL | |      }}
LL | |/     macro_rules! gen_inner { () => {
LL | ||         macro_rules! m { () => { Right } }
   | ||         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | ||     }}
   | ||______- in this expansion of `gen_inner!` (#2)
...  |
LL | |          gen_inner!();
   | |          ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }}
   | |___- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:135:9
   |
LL | / macro_rules! include { () => {
LL | |     macro_rules! gen_outer { () => {
LL | |         macro_rules! m { () => { Wrong } }
LL | |     }}
...  |
LL | |         macro_rules! m { () => {} }
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...  |
LL | |     }
LL | | }}
   | |__- in this expansion of `include!`
LL |
LL |   include!();
   |   ---------- in this macro invocation

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-legacy.rs:148:9
   |
LL | / macro_rules! include { () => {
LL | |     macro_rules! gen_outer { () => {
LL | |         macro_rules! m { () => { Wrong } }
LL | |     }}
...  |
LL | |         m!();
   | |         ^ ambiguous name
...  |
LL | |     }
LL | | }}
   | |__- in this expansion of `include!`
LL |
LL |   include!();
   |   ---------- in this macro invocation
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:88:9
   |
LL | /  macro_rules! include { () => {
LL | |      macro_rules! gen_outer { () => {
LL | |          macro_rules! m { () => { Wrong } }
LL | |      }}
LL | |/     macro_rules! gen_inner { () => {
LL | ||         macro_rules! m { () => { Right } }
   | ||         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | ||     }}
   | ||______- in this expansion of `gen_inner!` (#2)
...  |
LL | |          gen_inner!();
   | |          ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }}
   | |___- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:144:9
   |
LL | / macro_rules! include { () => {
LL | |     macro_rules! gen_outer { () => {
LL | |         macro_rules! m { () => { Wrong } }
LL | |     }}
...  |
LL | |         macro_rules! m { () => {} }
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...  |
LL | |     }
LL | | }}
   | |__- in this expansion of `include!`
LL |
LL |   include!();
   |   ---------- in this macro invocation

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-legacy.rs:164:9
   |
LL | / macro_rules! include { () => {
LL | |     macro_rules! gen_outer { () => {
LL | |         macro_rules! m { () => { Wrong } }
LL | |     }}
...  |
LL | |         m!();
   | |         ^ ambiguous name
...  |
LL | |     }
LL | | }}
   | |__- in this expansion of `include!`
LL |
LL |   include!();
   |   ---------- in this macro invocation
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:88:9
   |
LL | /  macro_rules! include { () => {
LL | |      macro_rules! gen_outer { () => {
LL | |          macro_rules! m { () => { Wrong } }
LL | |      }}
LL | |/     macro_rules! gen_inner { () => {
LL | ||         macro_rules! m { () => { Right } }
   | ||         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | ||     }}
   | ||______- in this expansion of `gen_inner!` (#2)
...  |
LL | |          gen_inner!();
   | |          ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }}
   | |___- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:85:9
   |
LL | /  macro_rules! include { () => {
LL | |/     macro_rules! gen_outer { () => {
LL | ||         macro_rules! m { () => { Wrong } }
   | ||         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | ||     }}
   | ||______- in this expansion of `gen_outer!` (#2)
...  |
LL | |          gen_outer!();
   | |          ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }}
   | |___- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-legacy.rs:180:13
   |
LL | /  macro_rules! include { () => {
LL | |      macro_rules! gen_outer { () => {
LL | |          macro_rules! m { () => { Wrong } }
LL | |      }}
...  |
LL | |/         macro_rules! gen_gen_inner_invoc { () => {
LL | ||             gen_inner!();
LL | ||             m!();
   | ||             ^ ambiguous name
LL | ||         }}
   | ||__________- in this expansion of `gen_gen_inner_invoc!` (#2)
LL | |          gen_gen_inner_invoc!();
   | |          ---------------------- in this macro invocation (#2)
...  |
LL | |      }
LL | |  }}
   | |___- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:88:9
   |
LL | /   macro_rules! include { () => {
LL | |       macro_rules! gen_outer { () => {
LL | |           macro_rules! m { () => { Wrong } }
LL | |       }}
LL | | /     macro_rules! gen_inner { () => {
LL | | |         macro_rules! m { () => { Right } }
   | | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | | |     }}
   | | |______- in this expansion of `gen_inner!` (#3)
...  |
LL | | /         macro_rules! gen_gen_inner_invoc { () => {
LL | | |             gen_inner!();
   | | |             ------------ in this macro invocation (#3)
LL | | |             m!();
LL | | |         }}
   | | |__________- in this expansion of `gen_gen_inner_invoc!` (#2)
LL | |           gen_gen_inner_invoc!();
   | |           ---------------------- in this macro invocation (#2)
...  |
LL | |       }
LL | |   }}
   | |____- in this expansion of `include!` (#1)
LL |
LL |     include!();
   |     ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:85:9
   |
LL | /  macro_rules! include { () => {
LL | |/     macro_rules! gen_outer { () => {
LL | ||         macro_rules! m { () => { Wrong } }
   | ||         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | ||     }}
   | ||______- in this expansion of `gen_outer!` (#2)
...  |
LL | |          gen_outer!();
   | |          ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }}
   | |___- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-legacy.rs:218:42
   |
LL | / macro_rules! include { () => {
LL | |     macro_rules! gen_outer { () => {
LL | |         macro_rules! m { () => { Wrong } }
LL | |     }}
...  |
LL | |         macro_rules! gen_invoc { () => { m!() } }
   | |         ---------------------------------^-------
   | |         |                                |
   | |         |                                ambiguous name
   | |         in this expansion of `gen_invoc!` (#2)
LL | |         gen_invoc!();
   | |         ------------ in this macro invocation (#2)
...  |
LL | |     }
LL | | }}
   | |__- in this expansion of `include!` (#1)
LL |
LL |   include!();
   |   ---------- in this macro invocation (#1)
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:88:9
   |
LL | /  macro_rules! include { () => {
LL | |      macro_rules! gen_outer { () => {
LL | |          macro_rules! m { () => { Wrong } }
LL | |      }}
LL | |/     macro_rules! gen_inner { () => {
LL | ||         macro_rules! m { () => { Right } }
   | ||         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | ||     }}
   | ||______- in this expansion of `gen_inner!` (#2)
...  |
LL | |          gen_inner!();
   | |          ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }}
   | |___- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:85:9
   |
LL | /  macro_rules! include { () => {
LL | |/     macro_rules! gen_outer { () => {
LL | ||         macro_rules! m { () => { Wrong } }
   | ||         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | ||     }}
   | ||______- in this expansion of `gen_outer!` (#2)
...  |
LL | |          gen_outer!();
   | |          ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }}
   | |___- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-legacy.rs:232:9
   |
LL | / macro_rules! include { () => {
LL | |     macro_rules! gen_outer { () => {
LL | |         macro_rules! m { () => { Wrong } }
LL | |     }}
...  |
LL | |         m!();
   | |         ^ ambiguous name
...  |
LL | |     }
LL | | }}
   | |__- in this expansion of `include!`
LL |
LL |   include!();
   |   ---------- in this macro invocation
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:88:9
   |
LL | /   macro_rules! include { () => {
LL | |       macro_rules! gen_outer { () => {
LL | |           macro_rules! m { () => { Wrong } }
LL | |       }}
LL | | /     macro_rules! gen_inner { () => {
LL | | |         macro_rules! m { () => { Right } }
   | | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | | |     }}
   | | |______- in this expansion of `gen_inner!` (#3)
...  |
LL | | /         macro_rules! gen_outer_gen_inner { () => {
LL | | |             macro_rules! m { () => {} }
LL | | |             gen_inner!();
   | | |             ------------ in this macro invocation (#3)
LL | | |         }}
   | | |__________- in this expansion of `gen_outer_gen_inner!` (#2)
LL | |           gen_outer_gen_inner!();
   | |           ---------------------- in this macro invocation (#2)
...  |
LL | |       }
LL | |   }}
   | |____- in this expansion of `include!` (#1)
LL |
LL |     include!();
   |     ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:227:13
   |
LL | /  macro_rules! include { () => {
LL | |      macro_rules! gen_outer { () => {
LL | |          macro_rules! m { () => { Wrong } }
LL | |      }}
...  |
LL | |/         macro_rules! gen_outer_gen_inner { () => {
LL | ||             macro_rules! m { () => {} }
   | ||             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | ||             gen_inner!();
LL | ||         }}
   | ||__________- in this expansion of `gen_outer_gen_inner!` (#2)
LL | |          gen_outer_gen_inner!();
   | |          ---------------------- in this macro invocation (#2)
...  |
LL | |      }
LL | |  }}
   | |___- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-legacy.rs:262:42
   |
LL | / macro_rules! include { () => {
LL | |     macro_rules! gen_outer { () => {
LL | |         macro_rules! m { () => { Wrong } }
LL | |     }}
...  |
LL | |         macro_rules! gen_invoc { () => { m!() } }
   | |         ---------------------------------^-------
   | |         |                                |
   | |         |                                ambiguous name
   | |         in this expansion of `gen_invoc!` (#2)
LL | |         gen_invoc!();
   | |         ------------ in this macro invocation (#2)
...  |
LL | |     }
LL | | }}
   | |__- in this expansion of `include!` (#1)
LL |
LL |   include!();
   |   ---------- in this macro invocation (#1)
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:88:9
   |
LL | /   macro_rules! include { () => {
LL | |       macro_rules! gen_outer { () => {
LL | |           macro_rules! m { () => { Wrong } }
LL | |       }}
LL | | /     macro_rules! gen_inner { () => {
LL | | |         macro_rules! m { () => { Right } }
   | | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | | |     }}
   | | |______- in this expansion of `gen_inner!` (#3)
...  |
LL | | /         macro_rules! gen_outer_gen_inner { () => {
LL | | |             macro_rules! m { () => {} }
LL | | |             gen_inner!();
   | | |             ------------ in this macro invocation (#3)
LL | | |         }}
   | | |__________- in this expansion of `gen_outer_gen_inner!` (#2)
LL | |           gen_outer_gen_inner!();
   | |           ---------------------- in this macro invocation (#2)
...  |
LL | |       }
LL | |   }}
   | |____- in this expansion of `include!` (#1)
LL |
LL |     include!();
   |     ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-legacy.rs:257:13
   |
LL | /  macro_rules! include { () => {
LL | |      macro_rules! gen_outer { () => {
LL | |          macro_rules! m { () => { Wrong } }
LL | |      }}
...  |
LL | |/         macro_rules! gen_outer_gen_inner { () => {
LL | ||             macro_rules! m { () => {} }
   | ||             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | ||             gen_inner!();
LL | ||         }}
   | ||__________- in this expansion of `gen_outer_gen_inner!` (#2)
LL | |          gen_outer_gen_inner!();
   | |          ---------------------- in this macro invocation (#2)
...  |
LL | |      }
LL | |  }}
   | |___- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0659`.
